# gpt_chat_bot

./: .gitignore  Makefile  README.md  docker-compose.yml  lefthook.yml  pyproject.toml  setup.cfg
.github/workflows/: check-lint.yml  poetry-test.yml
app/: constants.py  main.py  routers.py
app/api/system/: controllers.py
app/chat-gpt/: Caddyfile  Dockerfile  README.md  run.py
app/chat-gpt/g4f/: __init__.py  models.py  utils.py
app/chat-gpt/g4f/Provider/: __init__.py
app/chat-gpt/g4f/Provider/Providers/: Bard.py  ChatFree.py  DeepAi.py  Easychat.py  Fakeopen.py  Vercel.py  Weuseing.py  Xiaor.py  You.py  Yqcloud.py  Zeabur.py  hteyun.py
app/chat-gpt/g4f/Provider/Providers/helpers/: gpt4love.py  theb.py
app/chat-gpt/server/: bp.py  config.py
app/core/: bot.py  commands.py  handlers.py  utils.py
bot_microservice/: alembic.ini  constants.py  main.py  routers.py
bot_microservice/api/: base_schemas.py  deps.py  exceptions.py
bot_microservice/api/auth/: deps.py
bot_microservice/api/bot/: constants.py  controllers.py  deps.py  serializers.py
bot_microservice/api/system/: controllers.py
bot_microservice/core/: bot.py  commands.py  handlers.py  keyboards.py  lifetime.py  logging.py  utils.py
bot_microservice/core/auth/: dto.py  repositories.py  repository.py  services.py  utils.py
bot_microservice/core/auth/models/: users.py
bot_microservice/core/bot/: app.py  commands.py  handlers.py  keyboards.py  repository.py  services.py
bot_microservice/core/bot/managment/: update_gpt_models.py
bot_microservice/core/bot/models/: chat_gpt.py  chatgpt.py
bot_microservice/infra/: admin.py  logging_conf.py  utils.py
bot_microservice/infra/database/: base.py  db_adapter.py  deps.py
bot_microservice/infra/database/migrations/: env.py
bot_microservice/infra/database/migrations/versions/: 0001_create_chatgpt_table.py  0002_create_auth_tables.py  0002_create_chatgpt_models.py  0003_create_auth_tables.py  0003_create_user_question_count_table.py  0003_create_users_table.py  0004_add_chatgpt_models.py  0004_add_last_question_at.py  2023-10-05-18-28_eb78565abec7.py  2023-10-05-20-44_c2e443941930.py
bot_microservice/settings/: .env.local.runtests  .env.runtests  .env.template  config.py
bot_microservice/tests/: conftest.py
bot_microservice/tests/integration/: conftest.py  test_system.py  utils.py
bot_microservice/tests/integration/bot/: conftest.py  networking.py  test_bot_api.py  test_bot_updates.py  test_chatgpt_models.py
bot_microservice/tests/integration/factories/: bot.py  user.py  utils.py
bot_microservice/tests/integration/system/: test_system.py
bot_microservice/tests/unit/: test_system_utils.py
chat_gpt_microservice/: Dockerfile  README.md  config.json  docker-compose.yml  git-clang-format.py  pyproject.toml  run.py
chat_gpt_microservice/client/html/: index.html
chat_gpt_microservice/g4f/: active_providers.py  typing.py
chat_gpt_microservice/g4f/Provider/: Provider.py
chat_gpt_microservice/g4f/Provider/Providers/: AiService.py  Aichat.py  Ails.py  Bard.py  Better.py  Bing.py  ChatFree.py  ChatgptAi.py  ChatgptLogin.py  DeepAi.py  Easychat.py  Ezcht.py  Forefront.py  GetGpt.py  Gravityengine.py  H2o.py  Liaobots.py  Lockchat.py  Mishalsgpt.py  Phind.py  Theb.py  Vercel.py  Weuseing.py  Wewordle.py  Xiaor.py  Yqcloud.py  Zeabur.py  hteyun.py
chat_gpt_microservice/g4f/Provider/Providers/helpers/: you.py
chat_gpt_microservice/server/: babel.py  backend.py  website.py
chatgpt_microservice/: .gitignore  README.md  git-clang-format.py
chatgpt_microservice/.github/workflows/: build.yaml
chatgpt_microservice/client/html/: index.html
chatgpt_microservice/include/: cfg.h
chatgpt_microservice/src/: main.cpp
chatgpt_microservice/tools/: zeus.py
deploy/: Caddyfile  Dockerfile
scripts/: chat_gpt_bot.service  gpt_chat_bot.service  gptchatbot.service  healthcheck_bot.service  start-bot.sh  start-chat.sh
settings/: .env.ci.runtests  .env.local.runtests  .env.staging  .env.template  config.py
tests/integration/bot/: conftest.py  networking.py  test_bot_updates.py
tests/integration/factories/: bot.py  models.py
