[tool.poetry]
name = "gpt bot"
version = "1.0.2"
description = "poetry requiremts creation"
authors = ["Dmitry Afanasyev <Balshbox@gmail.com>"]

[tool.poetry.dependencies]
Python="^3.11"
websocket-client = "^1.6"
requests = "^2.31"
selenium = "^4.11"
tls-client = "^0.2"
pypasser = "^0.0.5"
names = "^0.3"
colorama = "^0.4"
curl_cffi = "^0.5"
aiohttp = "^3.8.5"
flask = "^2.3"
flask_cors = "^4.0"
flask-babel = "^3.1"
streamlit = "^1.26"
fake-useragent = "^1.2"
twocaptcha = "^0.0.1"
pydantic = "^2.3"
pymailtm = "^1.1"
Levenshtein = "^0.21"
retrying = "^1.3"
mailgw_temporary_email = "^0.0.2"
pycryptodome = "^3.18"
random-password-generator = "^2.2"
numpy = "^1.25"
tornado = "^6.3"
PyExecJS = "^1.5"
browser_cookie3 = "^0.19"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
